--- a/src/components/MainLayout.astro
+++ b/src/components/MainLayout.astro
@@ -1,18 +1,18 @@
 ---
-const { title, description } = Astro.props;
+const { title, description } = Astro.props
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content={description} />
-  <title>{title}</title>
-  <!-- Additional meta tags or styles can be added here -->
-</head>
-<body>
-  <slot />
-  <!-- Common footer or navigation can be added here -->
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content={description} />
+    <title>{title}</title>
+    <!-- Additional meta tags or styles can be added here -->
+  </head>
+  <body>
+    <slot />
+    <!-- Common footer or navigation can be added here -->
+  </body>
 </html>
