--- a/src/components/LoopPlayer.astro
+++ b/src/components/LoopPlayer.astro
@@ -14,7 +14,7 @@ const { autoPlay = false, class: className = '' } = Astro.props
 
 <div class={`pleco-loop-player ${className}`}>
   <div class="loop-upload">
-    <input type="file" id="loopFileInput" accept="audio/*" />
+    <input type="file" id="loopFileInput" accept="assets/audio/*" />
     <label for="loopFileInput">Load Loop</label>
   </div>
 
