--- a/src/components/PlecoAnalyzer.astro
+++ b/src/components/PlecoAnalyzer.astro
@@ -27,7 +27,7 @@ const {
   {
     allowUpload && (
       <div class="pleco-upload">
-        <input type="file" id="plecoFileInput" accept="audio/*" />
+        <input type="file" id="plecoFileInput" accept="assets/audio/*" />
         <label for="plecoFileInput">Choose Audio File</label>
       </div>
     )
